<resources>
    <string name="app_name">Have I Seen It</string>
    <!--  Image descriptions  -->
    <string name="splash_background_description">Splash Screen primary color Background Image</string>
    <string name="splash_icon_description">Splash Screen Icon Image</string>
    <!--  Login  -->
    <string name="login">Login</string>
    <string name="create_account_link_text">
        <u>Join The Club</u>
    </string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Contraseña</string>
    <string name="login_failed_message">Usuario y/o contraseña incorrectos</string>
    <!--  Create Account  -->
    <string name="create_account_title">Crear Cuenta</string>
    <string name="username_placeholder">Nombre de Usuario</string>
    <string name="repeat_password_placeholder">Repetir Contraseña</string>
    <string name="create_account_submit">Lets Go!</string>
    <string name="username_missing_message">Debe ingresar su nombre</string>
    <string name="login_link_text">
        <u>Ir a Login</u>
    </string>
    <string name="hello_blank_fragment">TODO</string>
    <string name="password_mismatch_message">Las contraseñas no coinciden</string>
    <string name="user_created_message">Su usuario ha sido creado</string>
    <!--   Forms   -->
    <string name="email_missing_message">Debe ingresar un email</string>
    <string name="password_missing_message">Debe ingresar una contraseña</string>
    <string name="text_input_missing_default_message">Este campo es obligatorio</string>
    <string name="email_error_message">Este no es un email válido</string>
    <string name="password_error_message">la contraseña debe tener entre 5 y 10 caracteres y contener un número</string>
    <!--  Movies List  -->
    <string name="no_movies_added">Todavía no has agregado ninguna películas.\n\n Presiona en + para comenzar!</string>
    <string name="search">Buscar</string>
    <string name="search_hint">Buscar películas</string>
    <string name="list_director">Director: %1$s</string>
    <string name="list_rating">Mi puntuación: %1$.1f</string>
    <string name="movie_status_to_watch">PARA VER</string>
    <string name="movie_status_started">EMPEZADA</string>
    <string name="movie_status_seen">VISTA</string>
    <string name="movie_status_in_review">REVIEW DRAFT</string>
    <string name="movie_status_reviewed">REVIEWED</string>
    <string name="delete_dialog_title">Estás seguro?</string>
    <string name="movie_deleted_message">Se ha borrado con éxito</string>
    <!--  Movie Detail  -->
    <string name="tab_info">INFO</string>
    <string name="tab_review">REVIEW</string>
    <string name="tab_notes">NOTAS</string>
    <string name="year_text">Año:&#160;</string>
    <string name="director_text">Director:&#160;</string>
    <string name="duration_text">Duración:&#160;</string>
    <string name="my_score_text">Mi Puntuación</string>
    <string name="state_text">Estado:</string>
    <string name="dialog_close">OK</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_title">Cambiar Estado</string>
    <string name="mark_review">Marcar como terminada</string>
    <string name="write_review">Escribe tu reseña...</string>
    <string name="add_note">Agregar Nota...</string>
    <string name="my_notes">Mis Notas:</string>
    <string name="status_changed_message">Se ha movido la película a %1$s</string>
    <string name="score_changed">Puntuación actualizada</string>
    <!--  New Movie  -->
    <string name="add_to_my_library">Agregar a mi Biblioteca</string>
    <string name="movie_added_message">Película agregada tu biblioteca</string>
    <!--  Toolbars  -->
    <string name="toolbar_confirm_changes">Save</string>
    <string name="toolbar_cancel_changes">Cancel</string>
    <string name="toolbar_delete">Delete</string>
</resources>
