<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.users.fragments.Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="143dp"
        android:layout_height="204dp"
        android:contentDescription="@string/splash_icon_description"
        android:src="@drawable/film_roll"
        app:layout_constraintBottom_toTopOf="@+id/login_top_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_icon_guideline" />

    <EditText
        android:id="@+id/login_email_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorGrey"
        android:ems="10"
        android:hint="@string/email_placeholder"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorGrey"
        app:layout_constraintBottom_toTopOf="@+id/login_password_input"
        app:layout_constraintEnd_toStartOf="@+id/login_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/login_left_guideline"
        app:layout_constraintTop_toTopOf="@+id/login_top_guideline"
        android:autofillHints="" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorGrey"
        android:ems="10"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorGrey"
        app:layout_constraintBottom_toTopOf="@+id/login_submit_button"
        app:layout_constraintEnd_toStartOf="@+id/login_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/login_left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/login_email_input"
        android:autofillHints="" />

    <Button
        android:id="@+id/login_submit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorLightBlue"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/login_bottom_guideline"
        app:layout_constraintEnd_toStartOf="@id/login_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/login_left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/login_password_input" />

    <TextView
        android:id="@+id/login_to_create_account_hyperlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_link_text"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/login_left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/login_submit_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_icon_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

</androidx.constraintlayout.widget.ConstraintLayout>